force-app/main/default/objects/Field_Service_Agent__c/Field_Service_Agent__c.object-meta.xml
<CustomObject>
    <label>Field Service Agent</label>
    <nameField>
        <displayFormat>FSA={00000}</displayFormat>
        <label>Field Service Agent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>